Se documenta las clases y sus metodos mas importantes, ademas se crea un README con toda la informacion general